--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 .navbar-header img{
-    max-width: 100px;
+    max-width: 300px;
     padding: 10px;
 }
 .wpo-campaign-area .campaign-btn .e-btn,
@@ -24,6 +24,244 @@
   background: #5dc4b8;
   color: #fff;
 }
+
+.wpo-event-area {
+    padding-top: 90px;
+}
+.grid img{
+    width: 100px !important;
+}
+.logo img{
+    max-width: 150px;
+}
+.wpo-features-icon .icon img{
+  width: 50px;
+}
+
+
+.wpo-blog-section-s3 {
+  background: #fff;
+  padding-bottom: 90px;
+}
+
+
+.mini-gallery > .row > .column {
+  padding: 0 8px;
+}
+
+.mini-gallery > .row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Create four equal columns that floats next to eachother */
+.mini-gallery > .column {
+  float: left;
+  width: 25%;
+}
+.mini-gallery .column img{
+  width: 100px;
+}
+/* The Modal (background) */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  width: 90%;
+  max-width: 1200px;
+}
+
+/* The Close Button */
+.close {
+  color: white;
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #999;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Hide the slides by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* Caption text */
+.caption-container {
+  text-align: center;
+  background-color: black;
+  padding: 2px 16px;
+  color: white;
+}
+
+img.demo {
+  opacity: 0.6;
+}
+
+.active,
+.demo:hover {
+  opacity: 1;
+}
+
+img.hover-shadow {
+  transition: 0.3s;
+}
+
+.hover-shadow:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.wpo-about-section-s6 .wpo-about-items .wpo-about-text {
+  padding-left: 0px !important;
+ 
+}
+
+.wpo-event-area-s2 .wpo-event-wrap .event-slider button{
+  position: absolute;
+  left: 46%;
+  bottom: -30px;
+  transform: translateY(-50%);
+  height: 50px;
+  width: 50px;
+  line-height: 46px;
+  text-align: center;
+  background: #fff;
+  transition: all 0.3s;
+  border: 1px solid #ebebeb;
+  font-size: 20px;
+  border-radius: 5px;
+}
+.wpo-event-area-s2 .wpo-event-wrap .event-slider button:hover
+ {
+  background: #ef5f34;
+  color: #fff;
+}
+
+.wpo-event-single{
+  padding-bottom: 100px;
+}
+.wpo-accountBtn {
+  font-size: 16px;
+  padding: 10px 20px;
+  border: 2px solid #ef5f34;
+  width: 100%;
+  background: #ef5f34;
+  color: #fff;
+  transition: all 0.4s ease-in-out 0s;
+  margin-top: 20px;
+  border-radius: 5px;
+}
+.widget .form-group label{
+  color: white;
+}
+.widget .form-group{
+  padding-top: 10px;
+}
+.widget .form-group input{
+  padding: 10px 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 440px){
+  .wpo-site-header .navbar-header .navbar-brand img {
+      max-width: 70px;
+  }
+  }
+
+@media (max-width: 991px) {
+  .wpo-event-area-s2 .wpo-event-wrap .event-slider button {
+    display: none;
+  }
+}
+.wpo-event-area-s2 .wpo-event-wrap .event-slider .owl-next
+ {
+  left: 51%;
+  bottom: -30px;
+  transform: translateY(-50%);
+}
+@media (max-width: 991px) {
+  .wpo-event-area-s2 .wpo-event-wrap .event-slider .owl-next
+ {
+    display: none;
+  }
+}
 @media (max-width: 1200px) {
   .wpo-campaign-area .campaign-btn .e-btn,
 .wpo-campaign-area-s2 .campaign-btn .e-btn,
@@ -35,21 +273,9 @@
     font-size: 12px;
   }
 }
-.wpo-blog-section-s3 {
-    background: #fff;
-    padding-bottom: 90px;
-}
-@media (max-width: 440px){
-.wpo-site-header .navbar-header .navbar-brand img {
-    max-width: 70px;
-}
-}
-.wpo-event-area {
-    padding-top: 90px;
-}
-.grid img{
-    width: 100px !important;
-}
-.logo img{
-    max-width: 150px;
+@media (max-width: 1200px) {
+  .wpo-event-area-s2 .wpo-event-wrap .event-slider button
+{
+    left: 43%;
+  }
 }
