--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2258,7 +2258,7 @@ h2.hidden {
 }
 @media (max-width: 1400px) {
   .wpo-site-header #navbar > ul > li > a {
-    padding: 30px 10px;
+    padding: 30px 25px;
     font-size: 18px;
   }
 }
@@ -3121,7 +3121,7 @@ h2.hidden {
 
 .wpo-hero-section-4,
 .wpo-hero-section-7 {
-  background: url(../images/slider/slide-2.jpg) no-repeat right center;
+  background: url(../images/slider/banner-1.png) no-repeat right center;
   z-index: 1;
   height: 995px;
   overflow: hidden;
@@ -3156,10 +3156,10 @@ h2.hidden {
   position: absolute;
   left: 0;
   top: 0;
-  width: 60%;
+  width: 100%;
   height: 100%;
   content: "";
-  background: url(../images/slider/left-shape.png) no-repeat right center;
+  background: url(../images/slider/left-shape-3.png) no-repeat right center;
   z-index: -1;
 }
 @media (max-width: 1300px) {
@@ -7058,7 +7058,7 @@ wpo-hero-section-6
 .wpo-about-section-s6 .wpo-about-items .wpo-about-wrap .wpo-about-img {
   margin: 0;
   position: relative;
-  z-index: 1;
+  /* z-index: 1; */
 }
 .wpo-about-section-s6 .wpo-about-items .wpo-about-wrap .wpo-about-img::before {
   display: none;
