--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -621,7 +621,7 @@ h2.hidden {
 }
 
 .wpo-breadcumb-area {
-  background: url(../images/page-title.jpg) no-repeat center top/cover;
+  background: url(../images/about/about-header.png) no-repeat center top/cover;
   min-height: 400px;
   position: relative;
   display: flex;
