--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -279,6 +279,58 @@ img.hover-shadow {
 .about-page .wpo-about-section-s6 .wpo-about-items .wpo-about-text {
   padding-left: 20px !important;
 }
+.about-page .wpo-breadcumb-area {
+  background: url(../images/about/about-header.png) no-repeat center top/cover;
+}
+.cottage-page .wpo-breadcumb-area {
+  background: url(../images/cottage/cottage-bg.png) no-repeat center top/cover;
+}
+.cottage-page  .wpo-about-section-s5 {
+  padding-top: 120px;
+}
+.cottage-page .wpo-about-text .wpo-sheafeature-section .wpo-features-icon {
+  background: #dafdf9;
+  box-shadow: 0px 0px 63px 0px rgb(4 8 88 / 5%);
+  width: 150px;
+  height: 150px;
+  line-height: 150px;
+  text-align: center;
+  margin: 0 auto;
+  border-radius: 50%;
+  position: relative;
+   
+}
+.cottage-page .wpo-about-text .wpo-sheafeature-section .wpo-features-icon .fi{
+  font-size: 60px;
+  color: #5dc4b8;
+}
+.cottage-page .wpo-about-text .wpo-sheafeature-section .col:nth-child(2) .wpo-features-icon .fi {
+  color: #ef5f34;
+}
+
+.cottage-page .wpo-about-text .wpo-sheafeature-section .col:nth-child(2) .wpo-features-icon{
+  background: #ffefeb;
+}
+.cottage-page .wpo-about-text .wpo-sheafeature-section .col:nth-child(3) .wpo-features-icon .fi {
+  color: #2eb1dc;
+}
+
+.cottage-page .wpo-about-text .wpo-sheafeature-section .col:nth-child(3) .wpo-features-icon{
+  background: #d2ecf4;
+}
+
+.wpo-sheafeature-section h4{
+  text-align: center;
+}
+.cottage-page .wpo-about-section-s3 {
+  padding-top: 90px;
+}
+.cottage-page .wpo-about-video-area {
+  padding-top: 60px;
+}
+
+
+
 
 
 
