--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -420,6 +420,19 @@ img.hover-shadow {
 .sauki-page .wpo-about-section-s4 .school-based{
   background: #d2ecf4 !important;
 }
+.northeast .wpo-project-single-section .wpo-project-single-wrap .wpo-project-single-content .wpo-project-single-content-des .wpo-project-single-content-des-wrap {
+  display: block;
+}
+.northeast .wpo-project-single-section .wpo-project-single-wrap .wpo-solutions-section .wpo-solutions-item{
+  height: 500px;
+}
+
+
+
+
+
+
+
 
 
 
